--- a/src/components/Offers/offers.scss
+++ b/src/components/Offers/offers.scss
@@ -1,4 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap');
+
 .offers{
+    flex: 1;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -6,18 +9,23 @@
     justify-content: space-evenly;
 
     &__mountain{
-        font-size: 2rem;
+        font-family: 'Patrick Hand', cursive;
+        font-size: 3rem;
+        color: #EAEAEA;
         text-align: center;
         width: 100%;
         height: 10%;
     }
 
     &__card{
-     width: 40%;
-     height: 50%;
-     border: 1px solid lightgray;
-     margin: 3rem 1rem 1rem 1rem;
-     display: flex;
+      width: 40%;
+      height: 50%;
+      margin: 3rem 1rem 1rem 1rem;
+      display: flex;
+      border-radius: .6rem;
+      overflow: hidden;
+      background-color: #f0f8ffa8;
+      box-shadow: 0 0 20px #333;
 
      &__description{
        width: 100%;
@@ -34,10 +42,8 @@
       float: left;
     }
 
-    &__button{
-     color: white;
-     margin-left: auto;
-     margin-right: auto;
+    &__link{
+      margin: 0 auto;
     }
     }
 }
