--- a/src/components/Signin/signin.scss
+++ b/src/components/Signin/signin.scss
@@ -1,5 +1,5 @@
 .signin{
-  height: 71vh;
+  flex: 1;
   margin: 3rem auto;
   display: flex;
   justify-content: center;
@@ -17,8 +17,12 @@
   
     &__buttons{
       display: flex;
-      flex-direction: row;
-      justify-content: space-evenly;
+      justify-content: center;
     }
   }
+}
+
+.ui.form .field>label {
+  color: #f1f1f1;
+  text-shadow: 0 0 3px #000;
 }
