--- a/src/components/App/styles.css
+++ b/src/components/App/styles.css
@@ -7,6 +7,8 @@
   min-height: 100vh;
   background-image: url('https://images.unsplash.com/photo-1576235789670-28a9c8e950b8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2340&q=80');
   background-size: cover;
+  background-position-x: center;
+  background-attachment: fixed;
   font-family: 'Roboto', sans-serif;
 }
 
