--- a/src/components/Locations/locations.scss
+++ b/src/components/Locations/locations.scss
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap');
 
-.offers{
+.locations{
     flex: 1;
     display: flex;
     flex-direction: row;
@@ -8,42 +8,38 @@
     margin-top: 2rem;
     justify-content: space-evenly;
 
-    &__mountain{
-        font-family: 'Patrick Hand', cursive;
-        font-size: 3rem;
-        color: #EAEAEA;
-        text-align: center;
-        width: 100%;
-        height: 10%;
-    }
+    
 
     &__card{
-      width: 40%;
-      height: 50%;
-      margin: 3rem 1rem 1rem 1rem;
       display: flex;
+      flex-direction: column;
+      margin: 2rem;
+      width: 28%;
+      min-width: 300px;
       border-radius: .6rem;
       overflow: hidden;
       background-color: #f0f8ffa8;
       box-shadow: 0 0 20px #333;
-
-     &__description{
-       width: 100%;
-       display: flex;
-       flex-direction: column;
-       justify-content: space-evenly;
-       margin-left: 1rem;
-       margin-right: 1rem;
-     }
-
-    &__image{
-      width: 60%;
-      height: 50%;
-      float: left;
-    }
-
-    &__link{
-      margin: 0 auto;
-    }
-    }
+      cursor: pointer;
+      transition: .3s;
+  
+      &:hover {
+        transform: scale(1.03);
+      }
+    
+      &__image{
+        width: 100%;
+      }
+  
+      &__title{
+        font-size: 1.8rem;
+        padding: 1rem ;
+        font-family: 'Patrick Hand', cursive;
+      }
+  
+      &__description{
+        font-size: 1rem;
+        padding: 1rem;
+      }
+    }  
 }
