--- a/src/components/Profile/profile.scss
+++ b/src/components/Profile/profile.scss
@@ -2,7 +2,6 @@
 
 .profile {
   flex: 1;
-  width: 500px;
   margin: 3rem auto;
   display: flex;
   flex-direction: column;
@@ -14,13 +13,40 @@
     margin: 3rem auto;
     font-size: 3rem;
     font-weight: bold;
+    text-shadow: 0 0 2px #000;
   }
 
   &__form{
+    width: 500px;
 
     &__buttons{
       display: flex;
       justify-content: space-evenly;
     }
   }
-};
+}
+
+@media screen and (max-width: 680px) {
+  .profile {
+    &__title {
+      font-size: 2rem;
+    }
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .profile {
+    &__form {
+      width: 300px;
+
+      &__buttons{
+        display: flex;
+        flex-direction: column;
+
+        & .button {
+          margin: .4rem 0;
+        }
+      }
+    }
+  }
+}
