--- a/src/components/Copyright/copyright.scss
+++ b/src/components/Copyright/copyright.scss
@@ -4,7 +4,7 @@
   flex: 1;
   margin: 2rem;
 
-  & h1 {
+  &__title {
     font-family: 'Patrick Hand', cursive;
     font-weight: bold;
     color: #EAEAEA;
@@ -13,13 +13,57 @@
     text-align: center;
   }
 
-  & h2 {
-    font-weight: bold;
-    font-size: 1.2rem;
-  }
+  &__card-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
 
-  & p {
-    margin: 1.6rem 0;
-    line-height: 1.6;
+    & .card {
+      position: relative;
+      width: 300px;
+      margin: 2rem;
+      border-radius: .6rem;
+      background-color: #f0f8ffcf;
+      box-shadow: 0 0 20px #333;
+      overflow: hidden;
+
+      & .fire {
+        position: absolute;
+        opacity: 0;
+        transition: .3s;
+      }
+
+      &:hover .fire {
+        opacity: 1;
+        width: 300px;
+        bottom: 30px;
+      }
+
+      &__image {
+        width: 100%;
+      }
+
+      &__content {
+        padding: .6rem;
+
+        &__header {
+          font-weight: bold;
+          font-size: 1.4rem;
+          margin-bottom: .6rem;
+        }
+      }
+
+      &__footer {
+        display: flex;
+        justify-content: center;
+        padding: .6rem;
+
+        &__role {
+          margin: 0 .6rem;
+          font-size: .8rem;
+        }
+      }
+    }
   }
 }
