--- a/src/components/Locations/locations.scss
+++ b/src/components/Locations/locations.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
 .locations{
     flex: 1;
@@ -25,6 +26,11 @@
   
       &:hover {
         transform: scale(1.03);
+
+          & .locations__card__title {
+            color: #a5673f;
+            text-shadow: none;
+          }
       }
     
       &__image{
@@ -32,9 +38,13 @@
       }
   
       &__title{
-        font-size: 1.8rem;
+        position: absolute;
+        font-size: 1.4rem;
         padding: 1rem ;
-        font-family: 'Patrick Hand', cursive;
+        // font-family: 'Patrick Hand', cursive;
+        font-family: 'Roboto', sans-serif;
+        color: #EAEAEA;
+        text-shadow: 0 0 2px #000;
       }
   
       &__description{
