--- a/src/components/Main/main.scss
+++ b/src/components/Main/main.scss
@@ -13,11 +13,28 @@
     text-shadow: 0 0 5px #000;
     font-size: 2rem;
     margin: 1rem 0;
+    padding: 0 1rem;
   }
 
   &__link {
     margin-top: 2rem;
   }
 
+}
+
+@media screen and (max-width: 1225px) {
+  .main {
+    &__text {
+      font-size: 1.6rem;
+    }
+  }
+}
+
+@media screen and (max-width: 990px) {
+  .main {
+    &__text {
+      font-size: 1.2rem;
+    }
+  }
 }
 
