--- a/src/components/Offers/offers.scss
+++ b/src/components/Offers/offers.scss
@@ -26,6 +26,11 @@
   
       &:hover {
         transform: scale(1.03);
+
+        & .offers__card__title {
+          color: #a5673f;
+          text-shadow: none;
+        }
       }
     
       &__image{
@@ -33,6 +38,9 @@
       }
   
       &__title{
+        position: absolute;
+        color: #EAEAEA;
+        text-shadow: 0 0 2px #000;
         font-size: 1.8rem;
         padding: 1rem ;
         font-family: 'Patrick Hand', cursive;
