--- a/src/components/Signin/signin.scss
+++ b/src/components/Signin/signin.scss
@@ -5,15 +5,8 @@
   justify-content: center;
   align-items: center;
 
-  &__logo{
-    width: 400px;
-    height: 400px;
-  }
-
   &__form{
-    width: 400px;
-    height: 200px;
-    margin-left: 3rem;
+    width: 500px;
   
     &__buttons{
       display: flex;
@@ -25,4 +18,10 @@
 .ui.form .field>label {
   color: #f1f1f1;
   text-shadow: 0 0 3px #000;
+}
+
+@media screen and (max-width: 550px) {
+  .signin__form {
+    width: 300px;
+  }
 }
