--- a/src/components/Createoffer/createoffer.scss
+++ b/src/components/Createoffer/createoffer.scss
@@ -5,6 +5,12 @@
     display: flex;
     flex-direction: column;
 
+    &__title{
+      margin: 3rem auto;
+      font-size: 2rem;
+      font-weight: bold;
+    }
+
     &__form{
 
     &__button{
