--- a/src/components/Backoffice/Admin/backoffice-admin.scss
+++ b/src/components/Backoffice/Admin/backoffice-admin.scss
@@ -17,6 +17,20 @@
     color: #EAEAEA;
   }
 
+  &__create-offer{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+   
+  &__button{
+    margin: 2rem;
+    padding: 2rem;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+  }
+  }
+
   &__notifications{
     display: flex;
     flex-direction: row;
