--- a/src/components/Offer/offer.scss
+++ b/src/components/Offer/offer.scss
@@ -34,15 +34,49 @@
 
   &__main{
     width: 80%;
-    height: 20rem;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     margin: 3rem auto;
     
-    & p {
-      color: #EAEAEA;
-      text-shadow: 0 0 5px #000;
+    &__description {
+      width: 50%;
+      padding: 2rem;
+      background-color: #f0f8ffa8;
+      border-radius: .6rem;
+
+      & p {
+        margin: 1rem 0;
+      }
+
+      & table {
+        margin-left: 1.1rem;
+        & tr {
+          border-bottom: 1px solid #EAEAEA;
+          & td {
+            padding: .4rem .8rem;
+          }
+        }
+      }
+
+      & ul {
+        margin-left: 1.1rem;
+        list-style: disc;
+      }
+
+      & ol {
+        margin-left: 1.1rem;
+        list-style: decimal;
+      }
+
+      & strong {
+        font-weight: bold;
+      }
+
+      & i {
+        font-style: italic;
+      }
+
     }
 
     &__calendar{
