--- a/src/components/Error/error.scss
+++ b/src/components/Error/error.scss
@@ -1,6 +1,13 @@
 .page-not-found{
-  background-color: red;
+  background-color: lightblue;
   font-size: 3rem;
   font-weight: bold;
   text-align: center;
+
+  &__gif{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 2rem;
+}
 }
