--- a/src/components/Backoffice/Admin/backoffice-admin.scss
+++ b/src/components/Backoffice/Admin/backoffice-admin.scss
@@ -83,9 +83,10 @@
       margin: 2rem;
       width: 28%;
       min-width: 300px;
+      height: 180px;
       border-radius: .6rem;
       overflow: hidden;
-      background-color: #f0f8ffa8;
+      background-color: #f0f8ffcb;
       box-shadow: 0 0 20px #333;
       cursor: pointer;
       transition: .3s;
@@ -94,16 +95,22 @@
         transform: scale(1.03);
       }
 
-    &__image{
-      width: 250px;
-      height: 150px;
-    }
-
     &__details{
+      display: flex;
+      flex: 1;
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-between;
       font-size: 1rem;
       padding: 1rem;
-      margin-left: 1rem;
-      margin-right: 1rem;
+
+      &__name {
+        text-transform: uppercase;
+      }
+
+      &__city {
+        font-weight: 100;
+      }
   }
   }
 
