modify some css

--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -3,6 +3,7 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    z-index: 999;
     
     &__navigation{
       display: flex;
