--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  z-index: 999;
 
   &__logo{
     height: 70px;
@@ -16,13 +17,14 @@
 
     &__link{
       color: #EAEAEA;
+      text-shadow: 0 0 2px #000;
       font-weight: bold;
       margin: 1rem;
       transition: .3s;
 
       &:hover {
         color: #a5673f;
-        text-shadow: 0 0 3px #000;
+        text-shadow: 0 0 1px #000;
       }
 
       &--active{
