--- a/front/src/components/Offers/offers.scss
+++ b/front/src/components/Offers/offers.scss
@@ -42,7 +42,7 @@
         color: #EAEAEA;
         text-shadow: 0 0 2px #000;
         font-size: 1.8rem;
-        padding: 1rem ;
+        padding: 0 1rem ;
         font-family: 'Patrick Hand', cursive;
       }
   
