--- a/front/src/components/Paymentform/paymentform.scss
+++ b/front/src/components/Paymentform/paymentform.scss
@@ -1,9 +1,20 @@
+@import url('https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap');
+
 #payment-form {
+    flex: 1;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     padding: 1rem;
+
+    & h2 {
+        font-family: 'Patrick Hand', cursive;
+        color: #EAEAEA;
+        font-size: 3rem;
+        text-shadow: 0 0 2px #000;
+        margin-bottom: 2rem;
+    }
 }
   
 #card-element {
@@ -15,6 +26,11 @@
     color: #000;
 }
 
+.card-error {
+  color: #EAEAEA;
+  text-shadow: 0 0 2px #000;
+}
+
 #submit {
     width: 500px;
     padding: 1rem;
@@ -23,4 +39,91 @@
     color: #EAEAEA;
     border: none;
     margin-bottom: 2rem;
+    cursor: pointer;
+    transition: .3s;
+
+    &:disabled {
+        cursor: default;
+        &:hover {
+          background-color: #a5673f;
+        }
+      }
+
+    &:hover {
+        background-color: #744a2e;
+    }
+}
+
+/* spinner/processing state, errors */
+.spinner,
+.spinner:before,
+.spinner:after {
+  border-radius: 50%;
+}
+.spinner {
+  color: #ffffff;
+  font-size: 22px;
+  text-indent: -99999px;
+  margin: 0px auto;
+  position: relative;
+  width: 20px;
+  height: 20px;
+  box-shadow: inset 0 0 0 2px;
+  -webkit-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  transform: translateZ(0);
+}
+.spinner:before,
+.spinner:after {
+  position: absolute;
+  content: "";
+}
+.spinner:before {
+  width: 10.4px;
+  height: 20.4px;
+  background: #333;
+  border-radius: 20.4px 0 0 20.4px;
+  top: -0.2px;
+  left: -0.2px;
+  -webkit-transform-origin: 10.4px 10.2px;
+  transform-origin: 10.4px 10.2px;
+  -webkit-animation: loading 2s infinite ease 1.5s;
+  animation: loading 2s infinite ease 1.5s;
+}
+.spinner:after {
+  width: 10.4px;
+  height: 10.2px;
+  background: #333;
+  border-radius: 0 10.2px 10.2px 0;
+  top: -0.1px;
+  left: 10.2px;
+  -webkit-transform-origin: 0px 10.2px;
+  transform-origin: 0px 10.2px;
+  -webkit-animation: loading 2s infinite ease;
+  animation: loading 2s infinite ease;
+}
+@keyframes loading {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+
+.result-message {
+  line-height: 22px;
+  font-size: 16px;
+  color: #EAEAEA;
+  text-shadow: 0 0 2px #000;
+}
+.result-message a {
+  color: rgb(89, 111, 214);
+  font-weight: 600;
+  text-decoration: none;
+}
+.hidden {
+  display: none;
 }
