--- a/front/src/components/Copyright/copyright.scss
+++ b/front/src/components/Copyright/copyright.scss
@@ -48,6 +48,8 @@
         padding: .6rem;
 
         &__header {
+          display: flex;
+          align-items: center;
           font-weight: bold;
           font-size: 1.4rem;
           margin-bottom: .6rem;
