--- a/front/src/components/Createoffer/createoffer.scss
+++ b/front/src/components/Createoffer/createoffer.scss
@@ -1,14 +1,19 @@
+@import url('https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap');
+
 .create-offer{
   width: 50%;
   min-width: 500px;
   margin: 3rem auto;
   display: flex;
+  align-items: center;
   flex-direction: column;
 
   &__title{
-    margin: 3rem auto;
-    font-size: 2rem;
-    font-weight: bold;
+    font-family: 'Patrick Hand', cursive;
+    font-size: 3rem;
+    color: #EAEAEA;
+    text-shadow: 0 0 3px #000;
+    margin-bottom: 2rem;
   }
 
   &__form{
@@ -23,9 +28,10 @@
       margin-top: .2rem;
     }
 
-    &__button{
+    &__buttons{
       display: flex;
-      justify-content: space-evenly;  
+      justify-content: center;
+      margin-top: 2rem;
     }
   }
 }
