--- a/front/src/components/Signin/signin.scss
+++ b/front/src/components/Signin/signin.scss
@@ -1,9 +1,20 @@
+@import url('https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap');
+
 .signin{
   flex: 1;
   margin: 3rem auto;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+
+  & h2 {
+    font-family: 'Patrick Hand', cursive;
+    font-size: 3rem;
+    color: #EAEAEA;
+    text-shadow: 0 0 3px #000;
+    margin-bottom: 2rem;
+  }
 
   &__form{
     width: 500px;
