--- a/front/src/components/Createoffer/createoffer.scss
+++ b/front/src/components/Createoffer/createoffer.scss
@@ -1,10 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap');
 
 .create-offer{
-  width: 50%;
-  min-width: 500px;
+  flex: 1;
+  width: 100%;
   margin: 3rem auto;
   display: flex;
+  justify-content: center;
   align-items: center;
   flex-direction: column;
 
@@ -17,6 +18,8 @@
   }
 
   &__form{
+    width: 50%;
+    min-width: 300px;
     &__ck-label {
       color: #f1f1f1;
       text-shadow: 0 0 3px #000;
