--- a/front/src/components/Paymentform/paymentform.scss
+++ b/front/src/components/Paymentform/paymentform.scss
@@ -18,7 +18,8 @@
 }
   
 #card-element {
-    width: 500px;
+    width: 50%;
+    min-width: 300px;
     padding: 1rem;
     border-radius: .6rem .6rem 0 0;
     background-color: #f0f8ffcb;
@@ -32,7 +33,8 @@
 }
 
 #submit {
-    width: 500px;
+  width: 50%;
+  min-width: 300px;
     padding: 1rem;
     border-radius: 0 0 .6rem .6rem;
     background-color: #a5673f;
