--- a/front/src/components/Signup/signup.scss
+++ b/front/src/components/Signup/signup.scss
@@ -6,27 +6,8 @@
     justify-content: center;
     align-items: center;
 
-    & h2 {
-      font-family: 'Patrick Hand', cursive;
-      font-size: 3rem;
-      color: #EAEAEA;
-      text-shadow: 0 0 3px #000;
-      margin-bottom: 2rem;
-    }
-
-    &__logo{
-    width: 500px;
-    height: 500px;
-    }
-  
-    &__title{
-    font-size: 2rem;
-    font-weight: bold;
-    }
-
     &__form{
-      width: 50%;
-      min-width: 300px;
+      width: 500px;
 
       &__buttons{
         display: flex;
@@ -34,4 +15,10 @@
         justify-content: space-evenly;
       }
     }
+}
+
+@media screen and (max-width: 550px) {
+  .signup__form {
+    width: 300px;
+  }
 }
