--- a/front/src/components/Backoffice/User/backoffice-user.scss
+++ b/front/src/components/Backoffice/User/backoffice-user.scss
@@ -27,8 +27,13 @@
     box-shadow: 0 0 20px #333;
 
     & p {
-      margin-right: 2rem;
+      margin: 1rem;
     }
+
+    &__booking-offer {
+      font-weight: bold;
+    }
+
   }
 }
 
