--- a/front/src/components/Copyright/copyright.scss
+++ b/front/src/components/Copyright/copyright.scss
@@ -50,6 +50,7 @@
         &__header {
           display: flex;
           align-items: center;
+          justify-content: center;
           font-weight: bold;
           font-size: 1.4rem;
           margin-bottom: .6rem;
