--- a/front/src/components/Backoffice/Admin/backoffice-admin.scss
+++ b/front/src/components/Backoffice/Admin/backoffice-admin.scss
@@ -73,6 +73,7 @@
   &__card-list{
     display: flex;
     justify-content:space-evenly;
+    align-items: center;
     flex-wrap: wrap;
     margin-top: 2rem;
     margin-bottom: 2rem;
@@ -81,19 +82,25 @@
 
   &__card{
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
     margin: 2rem;
-    width: 28%;
-    min-width: 300px;
+    width: 300px;
     border-radius: .6rem;
     overflow: hidden;
     background-color: #f0f8ffcb;
     box-shadow: 0 0 20px #333;
     transition: .3s;
 
-      & img {
-        width: 50%;
-        min-width: 300px;
+      &__image {
+        display: flex;
+        align-items: center;
+        width: 100%;
+        height: 200px;
+        overflow: hidden;
+
+        & img {
+          width: 100%;
+        }
       }
   
       &:hover {
@@ -111,6 +118,7 @@
 
       &__name {
         text-transform: uppercase;
+        font-size: 1.4rem;
       }
 
       &__city {
